public/assets/css/style.css
/* ... */
.btn-success {
  color: #fff;
  background-color: #03a87c;
  border-color: #03a87c;
}

.small-text {
  font-size: 0.875em;
}

.padding_20 {
  padding: 20px !important;
}

.padding_30 {
  padding: 30px !important;
}

.padding_40 {
  padding: 40px !important;
}

a.read-more:hover {
  text-decoration: none;
  border: 1px solid rgba(255, 255, 255, 0);
}

.text-light a.read-more {
  background: none;
}

.m_b_1rem {
  margin-bottom: 1rem;
}

.m_b_2rem {
  margin-bottom: 2rem;
}

.m_b_3rem {
  margin-bottom: 3rem;
}

.m_b_4rem {
  margin-bottom: 3rem;
}

.m-l--15 {
  margin-left: -15px;
}

.btn-green {
  border-width: 1px;
  border-style: solid;
  padding: 0.3rem 0.8rem;
  border-radius: 3px;
  text-transform: uppercase;
  font-size: 0.875rem;
  font-weight: 300;
}

.link-green {
  text-transform: uppercase;
  font-size: 0.875rem;
  font-weight: 300;
}

.spanborder {
  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  margin-bottom: 1.8rem;
  font-weight: 700;
}

.spanborder span {
  border-bottom: 1px solid rgba(0, 0, 0, 0.53);
  display: inline-block;
  padding-bottom: 0.5rem;
  margin-bottom: -1px;
}

.capsSubtle {
  font-weight: 400 !important;
  font-style: normal !important;
  font-size: 0.8em;
  text-transform: uppercase;
  color: rgba(0, 0, 0, 0.54) !important;
  fill: rgba(0, 0, 0, 0.54) !important;
  letter-spacing: -1px;
}

/* FONTS & TYPOGRAPHY */
body {
  font-size: 16px;
  color: rgba(0, 0, 0, 0.84);
}

body,
.entry-meta,
.heading-font,
h1,
h2,
h3,
h4,
h5,
h6,
.entry-title,
.entry-excerpt,
.video-title,
.video-caption,
.archive-intro,
.author-section,
.section-featured h2,
.card-nav-link,
.card-nav-clocks .header-clock__label {
  font-family: "Cabin", sans-serif;
}

.menu-primary,
.capsSubtle,
.mobi-menu nav {
  font-family: "Cabin", sans-serif;
}

.entry-header,
.entry-wraper .excerpt,
.entry-wraper .entry-main-content {
  font-family: "Cabin", sans-serif;
}

/*BEGIN STYLE*/
#content {
  max-width: 100%;
  padding-top: 0;
}

/*Top Search*/
.search-popup {
  display: none;
  text-align: center;
  position: relative;
  margin-top: 50px;
  padding: 2rem 0;
  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.15);
}

a.searh-toggle:hover,
a.searh-toggle:focus,
a.searh-toggle:active {
  text-decoration: none;
}

.search-form {
  border-radius: 50px;
  background: transparent !important;
  border: 1px solid rgba(255, 255, 255, 0.2) !important;
  backdrop-filter: blur(10px);
}

.search-form.open-search {
  border: 1px solid rgba(255, 255, 255, 0.3) !important;
  background: rgba(255, 255, 255, 0.1) !important;
  color: var(--text-color) !important;
  backdrop-filter: blur(10px);
}

.dark-mode .search-form.open-search {
  border: 1px solid rgba(255, 255, 255, 0.4) !important;
  background: rgba(255, 255, 255, 0.1) !important;
  backdrop-filter: blur(10px);
}

input.search_field {
  background: transparent !important;
  height: 40px;
  border: 0;
  transition-duration: 0.2s;
  max-width: 300px;
  color: rgba(0, 0, 0, 0.54) !important;
}

.header-right .search-form input.search_field {
  width: 0;
  display: none;
  height: 30px;
}

.search-form.open-search .search_field:focus {
  background: none;
  border: 0;
  outline: none;
  box-shadow: none;
}

.search_field:focus {
  outline: none !important;
  box-shadow: none !important;
  border-color: transparent !important;
}

.header-right .search-form {
  padding: 0;
  margin-right: 0.5rem;
}

.header-right .search-form.open-search input.search_field {
  width: 250px;
  transition-duration: 0.2s;
  display: inline-block;
}

.popup-close {
  position: absolute;
  top: 0;
  right: 0;
  width: 30px;
  height: 30px;
  background-image: url(../images/close.svg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 13px;
}

.menu-search-form {
  max-width: 300px;
  margin: 0 auto;
  margin-bottom: 3rem;
}

.menu-search-form input {
  height: 40px;
  border-radius: 50px;
  border: 1px solid rgba(0, 0, 0, 0.34);
}

/*Progress bar*/
.top-scroll-bar {
  height: 1px;
  width: 0px;
  z-index: 9999999;
  position: fixed;
  top: 0;
}

.fixed {
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
}

.sticky-header {
  padding: 10px 0;
  height: 50px;
  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.15);
  background: #fff;
}

.sticky-header .logo-small {
  display: block;
  float: left;
}

.sticky-header .author-avatar {
  float: right;
  margin-right: 12px;
}

.sticky-header .social-network {
  margin-top: 3px;
  float: right;
}

.header-right .social-network li {
  display: inline-block;
}

#wrapper {
  min-height: 100%;
  position: relative;
  padding-top: 50px;
}

.boxed #wrapper {
  width: 80%;
  margin: 40px auto;
  background: #fff;
  box-shadow: 0 0 46px #a1c3ff;
}

/*Meta*/
.entry-meta {
  color: rgba(0, 0, 0, 0.54) !important;
  fill: rgba(0, 0, 0, 0.54) !important;
  font-size: 0.8rem;
  line-height: 1.2;
}

.entry-meta .author-avatar {
  float: left;
  margin: -3px 15px 0 0;
}

.entry-meta .author-avatar img {
  height: 40px;
  width: 40px;
}

.middotDivider {
  padding-right: 1em;
  font-size: 16px;
  position: relative;
}

.middotDivider::after {
  content: "";
  width: 2px;
  height: 2px;
  background: rgba(0, 0, 0, 0.54) !important;
  position: absolute;
  top: 50%;
  left: 45%;
}

.svgIcon {
  color: rgba(0, 0, 0, 0.54) !important;
  fill: rgba(0, 0, 0, 0.54) !important;
  font-size: 15px !important;
}

/* Back to top */
.back-to-top {
  position: fixed;
  bottom: 10%;
  right: 20px;
  display: none;
  cursor: pointer;
  z-index: 9999;
  transform: rotate(90deg);
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 12px;
  line-height: 1;
  background: transparent !important;
  border: 0;
  color: rgba(0, 0, 0, 0.54);
}

.back-to-top:hover {
  background: transparent !important;
  color: rgba(0, 0, 0, 0.54);
}

.back-to-top:focus {
  border: 0;
  outline: none;
}

.back-to-top i {
  font-size: 12px;
}

.back-to-top span {
  padding-left: 10px;
}
/* ... */

